--- a/scroll.html
+++ b/scroll.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="scroll.css">
   <script src="https://kit.fontawesome.com/1f743626ae.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Baloo+Tamma+2:wght@700&family=Caveat:wght@700&family=Great+Vibes&family=Pacifico&family=Permanent+Marker&family=Varela+Round&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
